--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,7 @@
     <title>Document</title>
 
     <!-- Bootstrap core CSS Modules-->
-    <link rel="stylesheet" href="">
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Belleza' rel='stylesheet'>
@@ -20,11 +21,43 @@
     <link href="css/main.css" rel="stylesheet" type="text/css">
 
 </head>
+
 <body>
 
     <!-- Navigation -->
-    <nav>
-    </nav>
+                    <!--Note that the text-uppercase will set the name in caps -->
+    <div class="navbar navbar-default navbar-fixed-top text-uppercase" id="mainNav" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle text-uppercase bg-primary text-white rounded" data-toggle="collapse" data-target=".navbar-collapse"
+                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">EFA Starter Template</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active">
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="active">
+                        <a href="#about">About</a>
+                    </li>
+                    <li class="active">
+                        <a href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="active">
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
 
     <!-- Header -->
     <header>
@@ -48,16 +81,19 @@
 
     <!-- Copyright -->
 
-    <!-- Modals --> 
+    <!-- Modals -->
 
     <!-- Scripts -->
 
-    <!-- Bootstrap -->
+    <!-- Bootstrap & jQuery Scripts - Note: jQuery must be first -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <!-- jQuery -->
+    <!-- jQuery 3rd Party Scripts-->
 
     <!-- Custom scripts for this template -->
     <script src="js/main.js"></script>
 
 </body>
+
 </html>
