--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
 
     <!-- Custom styles for this template -->
     <link href="css/main.css" rel="stylesheet" type="text/css">
-
 </head>
 
 <body>
-
     <!-- Navigation -->
-                    <!--Note that the text-uppercase will set the name in caps -->
-    <div class="navbar navbar-default navbar-fixed-top text-uppercase" id="mainNav" role="navigation">
+    <!--Note that the text-uppercase will set the name in caps -->
+    <nav class="navbar navbar-default text-uppercase" id="main-nav" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle text-uppercase bg-primary text-white rounded" data-toggle="collapse" data-target=".navbar-collapse"
@@ -55,31 +53,139 @@
                 </ul>
             </div>
         </div>
-    </div>
-
-
+    </nav>
 
     <!-- Header -->
-    <header>
+    <header class="jumbotron text-center">
+        <div class="container">
+            <h1 class="jumbotron-heading">Coder Portfolio</h1>
+            <p class="lead text-muted">Some text about how amazing and awesome we are.</p>
+            <p>
+                <a href="#" class="btn btn-primary">Press here for something.</a>
+            </p>
+        </div>
     </header>
 
     <!-- Portfolio -->
     <section>
+        <div class="row">
+            <h2 class="text-center text-uppercase text-white">Portfolio</h2>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="assets/img/badge-blue.png" alt="">
+                    <div class="text-center caption">
+                        <h3>Portfolio Item #1</h3>
+                        <p>Sub title</p>
+                        <p>
+                            <a href="#" class="btn btn-primary" role="button">Button</a>
+                            <a href="#" class="btn btn-default" role="button">Button</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="assets/img/badge-red.png" alt="">
+                    <div class="text-center caption">
+                        <h3>Portfolio Item #2</h3>
+                        <p>Sub title</p>
+                        <p>
+                            <a href="#" class="btn btn-primary" role="button">Button</a>
+                            <a href="#" class="btn btn-default" role="button">Button</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="assets/img/badge-yellow.png" alt="">
+                    <div class="text-center caption">
+                        <h3>Portfolio Item #3</h3>
+                        <p>Sub title</p>
+                        <p>
+                            <a href="#" class="btn btn-primary" role="button">Button</a>
+                            <a href="#" class="btn btn-default" role="button">Button</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- About -->
-    <section>
+    <section class="bg-primary text-white">
+        <div class="container">
+            <h2 class="text-center text-uppercase text-white">About</h2>
+            <div class="row">
+                <div class="col-lg-4">
+                    <p class="lead">Use this to get started with talking about your abilities. Here you will showcase your work, share contact
+                        information, attract employers, and get practice with front end development! let's have some fun!</p>
+                </div>
+                <div class="col-lg-4">
+                    <p class="lead"> >Use this to get started with talking about your abilities. Here you will showcase your work, share contact
+                        information, attract employers, and get practice with front end development! let's have some fun!</p>
+                </div>
+                <div class="col-lg-4">
+                    <p class="lead"> >Use this to get started with talking about your abilities. Here you will showcase your work, share contact
+                        information, attract employers, and get practice with front end development! let's have some fun!</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Contact -->
     <section>
+        <div class="container">
+            <h2 class="text-center text-uppercase">Contact Me</h2>
+            <div class="row">
+                <form>
+                    <div class="control-group">
+                        <div class="form-group">
+                            <label>Name</label>
+                            <input class="form-control" id="name" type="text" placeholder="Name">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="form-group">
+                            <label>Email Address</label>
+                            <input class="form-control" id="email" type="email" placeholder="Email Address">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="form-group">
+                            <label>Phone Number</label>
+                            <input class="form-control" id="phone" type="tel" placeholder="Phone Number">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="form-group">
+                            <label>Message</label>
+                            <textarea class="form-control" id="message" rows="5" placeholder="Message"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary">Send</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </section>
 
     <!-- Footer -->
-    <footer>
+
+
+
+    <!-- FOOTER -->
+    <footer class="bg-primary">
+        <p class="float-right">
+            <a href="#">Back to top</a>
+        </p>
+        <p>&copy; 2018 Developer Company, Inc. &middot;
+            <a href="#">Privacy</a> &middot;
+            <a href="#">Terms</a>
+        </p>
     </footer>
 
-    <!-- Copyright -->
 
     <!-- Modals -->
 
