--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Document</title>
+    <title>Portfolio Starter</title>
 
     <!-- Bootstrap core CSS Modules-->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
 
 <body>
 
-    
+
     <!-- Navigation -->
     <!--Note that the text-uppercase will set the name in caps -->
     <nav class="navbar navbar-default" id="main-nav" role="navigation">
@@ -38,17 +38,17 @@
                 </button>
                 <a class="navbar-brand text-uppercase navbar-left" id="developer-name" href="#">EFA Starter Template</a>
             </div>
-        
+
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right nav-choices">
                     <li class="active">
                         <a href="#">Home</a>
                     </li>
                     <li class="active">
-                        <a href="#about">About</a>
+                        <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="active">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#about">About</a>
                     </li>
                     <li class="active">
                         <a href="#contact">Contact</a>
@@ -70,7 +70,7 @@
     </header>
 
     <!-- Portfolio -->
-    <section>
+    <section id="portfolio">
         <div class="row">
             <h2 class="text-center text-uppercase text-white">Portfolio</h2>
             <div class="col-md-4">
@@ -116,7 +116,7 @@
     </section>
 
     <!-- About -->
-    <section class="bg-primary text-white">
+    <section id="about" class="bg-primary text-white">
         <div class="container">
             <h2 class="text-center text-uppercase text-white">About</h2>
             <div class="row">
@@ -137,7 +137,7 @@
     </section>
 
     <!-- Contact -->
-    <section>
+    <section id="contact">
         <div class="container">
             <h2 class="text-center text-uppercase">Contact Me</h2>
             <div class="row">
