Various additions to the header jumbotron

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <header class="jumbotron text-center" id="main-header">
         <div class="container">
             <h1 class="jumbotron-heading">Coder Portfolio</h1>
-            <p class="lead text-muted">Some text about how amazing and awesome we are.</p>
+            <p class="lead text-muted">Some text. A tag line. A lorem ipsum for now. More text that shows some sort of call to action.</p>
             <p>
                 <a href="#" class="btn btn-primary" id="header-action">Press here for something.</a>
             </p>
