Added starter code for hovering and sizing

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand text-uppercase navbar-left" id="developer-name" href="#">EFA Starter Template</a>
+                <a class="navbar-brand text-uppercase navbar-left" class="section-title" href="#">EFA Starter Template</a>
             </div>
 
             <div class="navbar-collapse collapse">
@@ -67,14 +67,70 @@
     </header>
 
     <!-- Portfolio -->
-    <section id="portfolio">
-        <div class="row">
-            <h2 class="text-center text-uppercase text-white">Portfolio</h2>
+    <section class="container" id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="text-center section-title">
+                    <h2>Portfolio</h2>
+                </div>
+            </div>
+        </div>
+        <div id="container" class="row">
             <div class="col-md-4">
-                <div class="thumbnail">
-                    <img src="assets/img/badge-blue.png" alt="">
+                <div class="portfolio-item">
+                    <a class="gallery-item">
+                        <img class="img-responsive" src="assets/img/badge-yellow.png" alt="One" />
+                    </a>
+                </div>
+                <div class="text-center caption">
+                    <h3>Portfolio Item #2</h3>
+                    <p>Sub title</p>
+                    <p>
+                        <a href="#" class="btn btn-primary" role="button">Button</a>
+                        <a href="#" class="btn btn-default" role="button">Button</a>
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="portfolio-item">
+                    <a class="gallery-item">
+                        <img class="img-responsive" src="assets/img/badge-blue.png" alt="One" />
+                    </a>
+                </div>
+                <div class="text-center caption">
+                    <h3>Portfolio Item #2</h3>
+                    <p>Sub title</p>
+                    <p>
+                        <a href="#" class="btn btn-primary" role="button">Button</a>
+                        <a href="#" class="btn btn-default" role="button">Button</a>
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="portfolio-item">
+                    <a class="gallery-item">
+                        <img class="img-responsive" src="assets/img/badge-red.png" alt="One" />
+                    </a>
+                </div>
+                <div class="text-center caption">
+                    <h3>Portfolio Item #2</h3>
+                    <p>Sub title</p>
+                    <p>
+                        <a href="#" class="btn btn-primary" role="button">Button</a>
+                        <a href="#" class="btn btn-default" role="button">Button</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div id="container" class="row">
+                <div class="col-md-4">
+                    <div class="portfolio-item">
+                        <a class="gallery-item">
+                            <img class="img-responsive" src="assets/img/badge-yellow.png" alt="One" />
+                        </a>
+                    </div>
                     <div class="text-center caption">
-                        <h3>Portfolio Item #1</h3>
+                        <h3>Portfolio Item #2</h3>
                         <p>Sub title</p>
                         <p>
                             <a href="#" class="btn btn-primary" role="button">Button</a>
@@ -82,10 +138,27 @@
                         </p>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <img src="assets/img/badge-red.png" alt="">
+                <div class="col-md-4">
+                    <div class="portfolio-item">
+                        <a class="gallery-item">
+                            <img class="img-responsive" src="assets/img/badge-blue.png" alt="One" />
+                        </a>
+                    </div>
+                    <div class="text-center caption">
+                        <h3>Portfolio Item #2</h3>
+                        <p>Sub title</p>
+                        <p>
+                            <a href="#" class="btn btn-primary" role="button">Button</a>
+                            <a href="#" class="btn btn-default" role="button">Button</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="portfolio-item">
+                        <a class="gallery-item">
+                            <img class="img-responsive" src="assets/img/badge-red.png" alt="One" />
+                        </a>
+                    </div>
                     <div class="text-center caption">
                         <h3>Portfolio Item #2</h3>
                         <p>Sub title</p>
@@ -96,21 +169,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <img src="assets/img/badge-yellow.png" alt="">
-                    <div class="text-center caption">
-                        <h3>Portfolio Item #3</h3>
-                        <p>Sub title</p>
-                        <p>
-                            <a href="#" class="btn btn-primary" role="button">Button</a>
-                            <a href="#" class="btn btn-default" role="button">Button</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    </section>>
 
     <!-- About -->
     <section id="about" class="bg-primary text-white">
