Added an effect. Added background

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
 
-  <!--==========================
+    <!--==========================
   Navigation Section
   ============================-->
     <nav class="navbar navbar-default" id="main-nav" role="navigation">
@@ -60,12 +60,12 @@
         </div>
     </nav>
 
-  <!--==========================
+    <!--==========================
   Header Section
   ============================-->
     <header class="jumbotron text-center" id="main-header">
         <div class="container">
-            <h1 class="jumbotron-heading">Coder Portfolio</h1>
+            <h1 class="jumbotron-heading">JSON SASS</h1>
             <div class="section-description wow fadeInUp" data-wow-duration="5s">
                 <p class="lead text-muted">Some text. A tag line. A lorem ipsum for now. More text that shows some sort of call to action.</p>
 
@@ -76,8 +76,7 @@
         </div>
     </header>
 
-
- <!--==========================
+    <!--==========================
   Porfolio Section
   ============================-->
     <section id="portfolio">
@@ -164,99 +163,104 @@
         </div>
     </section>
 
-  <!--==========================
+    <!--==========================
   About Section
   ============================-->
-    <section id="about" class="bg-primary text-white">
+    <section id="about">
         <div class="container">
-            <h2 class="text-center text-uppercase text-white">About</h2>
             <div class="row">
+                <div class="col-md-12">
+                    <h3 class="section-title">About</h3>
+                    <div class="section-title-divider"></div>
+                </div>
+            </div>
+            <section class="about-panel wow fadeInLeft" data-wow-delay="0.1s">
                 <div class="col-lg-4">
                     <p class="lead">Use this to get started with talking about your abilities. Here you will showcase your work, share contact
                         information, attract employers, and get practice with front end development! let's have some fun!</p>
                 </div>
                 <div class="col-lg-4">
-                    <p class="lead"> >Use this to get started with talking about your abilities. Here you will showcase your work, share contact
+                    <p class="lead">Use this to get started with talking about your abilities. Here you will showcase your work, share contact
                         information, attract employers, and get practice with front end development! let's have some fun!</p>
                 </div>
                 <div class="col-lg-4">
-                    <p class="lead"> >Use this to get started with talking about your abilities. Here you will showcase your work, share contact
+                    <p class="lead">Use this to get started with talking about your abilities. Here you will showcase your work, share contact
                         information, attract employers, and get practice with front end development! let's have some fun!</p>
                 </div>
-            </div>
+            </section>
         </div>
     </section>
-  
-  <!--==========================
+
+ <!--==========================
   Contact Section
   ============================-->
-    <section id="contact">
-        <div class="container">
-            <h2 class="text-center text-uppercase">Contact Me</h2>
-            <div class="row">
-                <form>
-                    <div class="control-group">
-                        <div class="form-group">
-                            <label>Name</label>
-                            <input class="form-control" id="name" type="text" placeholder="Name">
+        <section id="contact">
+            <div class="container">
+                <h2 class="text-center text-uppercase">Contact Me</h2>
+                <div class="row">
+                    <form>
+                        <div class="control-group">
+                            <div class="form-group">
+                                <label>Name</label>
+                                <input class="form-control" id="name" type="text" placeholder="Name">
+                            </div>
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group">
-                            <label>Email Address</label>
-                            <input class="form-control" id="email" type="email" placeholder="Email Address">
+                        <div class="control-group">
+                            <div class="form-group">
+                                <label>Email Address</label>
+                                <input class="form-control" id="email" type="email" placeholder="Email Address">
+                            </div>
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group">
-                            <label>Phone Number</label>
-                            <input class="form-control" id="phone" type="tel" placeholder="Phone Number">
+                        <div class="control-group">
+                            <div class="form-group">
+                                <label>Phone Number</label>
+                                <input class="form-control" id="phone" type="tel" placeholder="Phone Number">
+                            </div>
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group">
-                            <label>Message</label>
-                            <textarea class="form-control" id="message" rows="5" placeholder="Message"></textarea>
+                        <div class="control-group">
+                            <div class="form-group">
+                                <label>Message</label>
+                                <textarea class="form-control" id="message" rows="5" placeholder="Message"></textarea>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Send</button>
-                    </div>
-                </form>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">Send</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-  <!--==========================
+        <!--==========================
   Footer Section
   ============================-->
-    <footer class="bg-primary">
-        <p class="float-right">
-            <a href="#">Back to top</a>
-        </p>
-        <p>&copy; 2018 Developer Company, Inc. &middot;
-            <a href="#">Privacy</a> &middot;
-            <a href="#">Terms</a>
-        </p>
-    </footer>
+        <footer class="bg-primary">
+            <p class="float-right">
+                <a href="#">Back to top</a>
+            </p>
+            <p>&copy; 2018 Developer Company, Inc. &middot;
+                <a href="#">Privacy</a> &middot;
+                <a href="#">Terms</a>
+            </p>
+        </footer>
 
-  <!--==========================
+        <!--==========================
   Modals Section
   ============================-->
 
-  <!--==========================
+        <!--==========================
   Scripts Section
   ============================-->
 
-    <!-- Bootstrap & jQuery Scripts - Note: jQuery must be first -->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <!-- Bootstrap & jQuery Scripts - Note: jQuery must be first -->
+        <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <!-- jQuery 3rd Party Scripts-->
-    <script src="node_modules/wowjs/dist/wow.min.js"></script>
+        <!-- jQuery 3rd Party Scripts-->
+        <script src="node_modules/wowjs/dist/wow.min.js"></script>
 
-    <!-- Custom scripts for this template -->
-    <script src="js/main.min.js"></script>
+        <!-- Custom scripts for this template -->
+        <script src="js/main.min.js"></script>
 
 </body>
 
