Footer styling started

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link href="node_modules/animate.css/animate.min.css">
-    
+
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Belleza' rel='stylesheet'>
     <link href="" rel="stylesheet" type="text/css">
@@ -293,17 +293,22 @@
   Footer Section
   ============================-->
 
-    <footer class="bg-primary">
-        <p class="float-right">
-            <a href="#">Back to top</a>
-        </p>
-        <p>&copy; 2018 Paul O'Connor, weekend project built for helping students &middot;
-            <a href="#">Privacy</a> &middot;
-            <a href="#">Terms</a>
-        </p>
+    <footer>
+        <div class="container">
+            <p class="float-right">
+                <a href="#">Back to top</a>
+            </p>
+            <p>&copy; 2018 Paul O'Connor, weekend project built for helping students &middot;
+                <p>This template is owned by &copy; Eleven Fifty Academy, but is free for you to use and make customer alterations!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus incidunt repellendus similique at adipisci
+                    iste?
+                </p>
+                <a href="#">Privacy</a> &middot;
+                <a href="#">Terms</a>
+            </p>
+        </div>
     </footer>
-
-    <!--==========================
+  <!--==========================
   Modals Section
   ============================-->
 
