Added modal pop ups

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <link href='https://fonts.googleapis.com/css?family=Belleza' rel='stylesheet'>
     <link href="" rel="stylesheet" type="text/css">
 
-
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
+    <link rel="stylesheet" href="node_modules/magnific-popup/dist/magnific-popup.css">
 
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
@@ -91,80 +91,82 @@
                     <div class="section-title-divider"></div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <a class="portfolio-item" style="background-image: url(assets/img/badge-blue.png);" href="">
-                        <div class="details">
-                            <h4>Portfolio 1</h4>
-                            <span>CSS Creature</span>
-                        </div>
-                    </a>
+                <div class="row">
+                    <div class="col-md-3" href="assets/img/robot1.jpg" title="CSS Creature">
+                        <a class="portfolio-item with-caption img-link mfp-title" style="background-image: url(assets/img/badge-blue.png);" href="assets/img/robot1.jpg" title="CSS Work">
+                            <div class="details">
+                                <h4>Portfolio 1</h4>
+                                <span>CSS Creature</span>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-md-3">
+                        <a class="portfolio-item with-caption img-link mfp-title" style="background-image: url(assets/img/badge-red.png);" href="assets/img/robot2.jpg" title="HTML5 Work">
+                            <div class="details">
+                                <h4>Portfolio 2</h4>
+                                <span>Store app</span>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-md-3">
+                        <a class="portfolio-item with-caption img-link mfp-title" style="background-image: url(assets/img/badge-yellow.png);" href="assets/img/robot3.jpg" title="Vanilla JavaScript Studies">
+                            <div class="details">
+                                <h4>Portfolio 3</h4>
+                                <span>JavaScript Library</span>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-md-3">
+                        <a class="portfolio-item with-caption img-link mfp-title" style="background-image: url(assets/img/badge-blue.png);" href="assets/img/robot4.jpg" title="Workout Log">
+                            <div class="details">
+                                <h4>Portfolio 4</h4>
+                                <span>Workout Log</span>
+                            </div>
+                        </a>
+                    </div>
                 </div>
 
-                <div class="col-md-3">
-                    <a class="portfolio-item" style="background-image: url(assets/img/badge-red.png);" href="">
-                        <div class="details">
-                            <h4>Portfolio 2</h4>
-                            <span>Store app</span>
-                        </div>
-                    </a>
-                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <a class="portfolio-item with-caption img-link mfp-title" style="background-image: url(assets/img/badge-red.png);" href="assets/img/robot5.jpg" title="Workout Log">
+                            <div class="details">
+                                <h4>Portfolio 5</h4>
+                                <span>Bucketlist App</span>
+                            </div>
+                        </a>
+                    </div>
 
-                <div class="col-md-3">
-                    <a class="portfolio-item" style="background-image: url(assets/img/badge-yellow.png);" href="">
-                        <div class="details">
-                            <h4>Portfolio 3</h4>
-                            <span>JavaScript Library</span>
-                        </div>
-                    </a>
-                </div>
+                    <div class="col-md-3">
+                        <a class="portfolio-item with-caption img-link mfp-title" style="background-image: url(assets/img/badge-blue.png);" href="assets/img/robot6.jpg" title="Workout Log">
+                            <div class="details">
+                                <h4>Portfolio 6</h4>
+                                <span>Firebase Starter</span>
+                            </div>
+                        </a>
+                    </div>
 
-                <div class="col-md-3">
-                    <a class="portfolio-item" style="background-image: url(assets/img/badge-blue.png);" href="">
-                        <div class="details">
-                            <h4>Portfolio 4</h4>
-                            <span>Workout Log</span>
-                        </div>
-                    </a>
-                </div>
+                    <div class="col-md-3">
+                        <a class="portfolio-item with-caption img-link mfp-title" style="background-image: url(assets/img/badge-yellow.png);" href="assets/img/robot7.jpg" title="Workout Log">
+                            <div class="details">
+                                <h4>Portfolio 7</h4>
+                                <span>React Projects</span>
+                            </div>
+                        </a>
+                    </div>
 
-                <div class="col-md-3">
-                    <a class="portfolio-item" style="background-image: url(assets/img/badge-red.png);" href="">
-                        <div class="details">
-                            <h4>Portfolio 5</h4>
-                            <span>Bucketlist App</span>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-md-3">
-                    <a class="portfolio-item" style="background-image: url(assets/img/badge-blue.png);" href="">
-                        <div class="details">
-                            <h4>Portfolio 6</h4>
-                            <span>Firebase Starter</span>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-md-3">
-                    <a class="portfolio-item" style="background-image: url(assets/img/badge-yellow.png);" href="">
-                        <div class="details">
-                            <h4>Portfolio 7</h4>
-                            <span>React Projects</span>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-md-3">
-                    <a class="portfolio-item img-responsive" style="background-image: url(assets/img/badge-red.png);" href="">
-                        <div class="details">
-                            <h4>Portfolio 8</h4>
-                            <span>Node Projects</span>
-                        </div>
-                    </a>
+                    <div class="col-md-3">
+                        <a class="portfolio-item with-caption img-link mfp-title" style="background-image: url(assets/img/badge-red.png);" href="assets/img/robot1.jpg" title="Workout Log">
+                            <div class="details">
+                                <h4>Portfolio 8</h4>
+                                <span>Node Projects</span>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <!--==========================
@@ -308,10 +310,7 @@
             </p>
         </div>
     </footer>
-  <!--==========================
-  Modals Section
-  ============================-->
-
+ 
     <!--==========================
   Scripts Section
   ============================-->
@@ -322,6 +321,7 @@
 
     <!-- jQuery 3rd Party Scripts-->
     <script src="node_modules/wowjs/dist/wow.min.js"></script>
+    <script src="node_modules/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/main.min.js"></script>
