Added gulp commands for transporting specific node modules into the tools folder

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <title>Portfolio Starter</title>
 
     <!-- Bootstrap core CSS Modules-->
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link href="node_modules/animate.css/animate.min.css">
+    <link href="./tools/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./tools/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./tools/font-awesome/css/font-awesome.min.css">
+    <link href="./tools/animate.css">
 
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Belleza' rel='stylesheet'>
     <link href="" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
-    <link rel="stylesheet" href="node_modules/magnific-popup/dist/magnific-popup.css">
+    <link rel="stylesheet" href="./tools/animate.css/animate.min.css">
+    <link rel="stylesheet" href="./tools/magnific-popup/magnific-popup.css">
 
     <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
@@ -316,12 +316,12 @@
   ============================-->
 
     <!-- Bootstrap & jQuery Scripts - Note: jQuery must be first -->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./tools/jquery/jquery.min.js"></script>
+    <script src="./tools/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- jQuery 3rd Party Scripts-->
-    <script src="node_modules/wowjs/dist/wow.min.js"></script>
-    <script src="node_modules/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
+    <script src="./tools/wowjs/wow.min.js"></script>
+    <script src="./tools/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/main.min.js"></script>
